--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -16,7 +17,7 @@
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência
         e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-
     </body>
+
     
 </html>
