--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         
-        <img id = banner src="banner.jpg" alt="barbearia-alura">
+        <img id = banner src="imagens/banner.jpg" alt="barbearia-alura">
 
         <div class="principal">
             <h1>Sobre a Barbearia Alura</h1>
@@ -33,7 +33,7 @@
                 <li class="itens">Profissionais qualificados</li>
             </ul>
 
-            <img src="beneficios.jpg" alt="beneficios-barbearia-alura" class="imagBeneficios">
+            <img src="imagens/beneficios.jpg" alt="beneficios-barbearia-alura" class="imagBeneficios">
         </div>
 
         
