--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1><img src="logo.png" alt="logo-barbearia-alura"></h1>
+        <h1><img src="imagens/logo.png" alt="logo-barbearia-alura"></h1>
 
         <nav>
             <ul>
