--- a/produtos.html
+++ b/produtos.html
@@ -11,16 +11,40 @@
 
 <body>
     <header>
+        <div class="caixa">
+
         <h1><img src="imagens/logo.png" alt="logo-barbearia-alura"></h1>
-
-        <nav>
-            <ul>
-                <li> <a href="index.html">Home</a></li>
-                <li> <a href="produtos.html">Produtos</a></li>
-                <li> <a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-
+            <nav>
+                <ul>
+                    <li> <a href="index.html">Home</a></li>
+                    <li> <a href="produtos.html">Produtos</a></li>
+                    <li> <a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>  
     </header>
+
+    <main>
+        <ul class="produtos">
+            <li>
+                <h2>Cabelo</h2>
+                <img src="imagens/cabelo.jpg" alt="cabelo-logo">
+                <p class="produto-descricao">Na tesoura ou na máquina, como o cliente preferir</p>
+                <p class="produto-preco">R$ 25,00</p>
+            </li>
+            <li>
+                <h2>Barba</h2>
+                <img src="imagens/barba.jpg" alt="barba-logo">
+                <p class="produto-descricao">Corte e desenho profissional de barba</p>
+                <p class="produto-preco">R$ 18,00</p>
+            </li>
+            <li>
+                <h2>Cabelo + Barba</h2>
+                <img src="imagens/cabelo+barba.jpg" alt="cabelo-barba-logo">
+                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                <p class="produto-preco">R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
