--- a/produtos.html
+++ b/produtos.html
@@ -46,5 +46,10 @@
             </li>
         </ul>
     </main>
+
+    <footer>
+        <img src="imagens/logo-branco.png" alt="logo-barbearia-alura2">
+        <p class="copyright">&copy; Copyright Barbearia Alura 2021</p>
+    </footer>
 </body>
 </html>
