--- a/contato.html
+++ b/contato.html
@@ -51,9 +51,36 @@
                 </fieldset>
 
                 <label><input type="checkbox" class="input-checkbox" checked> Gostaria de receber nossas novidades por Email?</label>
-                <input type="submit" value="Enviar Formulário">
+                <input type="submit" value="Enviar Formulário" class="btn-enviar">
             </form>
 
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8~20</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8~20</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8~20</td>
+                    </tr>
+                    <tr>
+                        <td>Sábado</td>
+                        <td>8~20</td>
+                    </tr>
+                </tbody>
+                
+            </table>
         </main>
         <footer>
             <img src="imagens/logo-branco.png">
