--- a/index.html
+++ b/index.html
@@ -4,37 +4,58 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
-        
-        <img id = banner src="imagens/banner.jpg" alt="barbearia-alura">
+        <header>
+            <div class="caixa">
+                <h1><img src="imagens/logo.png"></h1>
 
-        <div class="principal">
-            <h1>Sobre a Barbearia Alura</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-            <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> Alura traz para o mercado o que há de melhor para o seu cabelo e barba.
-            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <main>
+            <img id = banner src="imagens/banner.jpg" alt="barbearia-alura">
 
-            <p id = "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </em> </p>
+            <section class="principal">
+                <h1>Sobre a Barbearia Alura</h1>
 
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência
-            e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
+                <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> Alura traz para o mercado o que há de melhor para o seu cabelo e barba.
+                Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <div class="beneficios">
-            <h2>Benefícios</h2>
+                <p id = "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </em> </p>
 
-            <ul>
-                <li class="itens">Atendimento ao cliente</li>
-                <li class="itens">Espaço diferenciado </li>
-                <li class="itens">Localização</li>
-                <li class="itens">Profissionais qualificados</li>
-            </ul>
+                <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência
+                e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+            </section>
 
-            <img src="imagens/beneficios.jpg" alt="beneficios-barbearia-alura" class="imagBeneficios">
-        </div>
+            <section class="beneficios">
+                <h2>Benefícios</h2>
+
+                <ul>
+                    <li class="itens">Atendimento ao cliente</li>
+                    <li class="itens">Espaço diferenciado </li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais qualificados</li>
+                </ul>
+
+                <img src="imagens/beneficios.jpg" alt="beneficios-barbearia-alura" class="imagBeneficios">
+            </section>
+        </main>
+
+        <footer>
+            <img src="imagens/logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        </footer>
 
     </body>
 </html>
